--- a/Final.ipynb
+++ b/Final.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "corporate-sherman",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing all necessary libraries\n",
     "%load_ext autoreload\n",
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "palestinian-harris",
    "metadata": {},
    "outputs": [
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "conceptual-stretch",
    "metadata": {
     "scrolled": true
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "sonic-operation",
    "metadata": {
     "scrolled": true
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "industrial-accordance",
    "metadata": {
     "scrolled": true
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "manufactured-sleep",
    "metadata": {
     "scrolled": true
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "theoretical-manufacturer",
    "metadata": {},
    "outputs": [],
@@ -194,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "recovered-conservative",
    "metadata": {},
    "outputs": [],
@@ -220,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "liquid-output",
    "metadata": {},
    "outputs": [],
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 94,
    "id": "systematic-smart",
    "metadata": {},
    "outputs": [],
@@ -268,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 59,
    "id": "traditional-tribe",
    "metadata": {},
    "outputs": [],
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 29,
    "id": "reported-juvenile",
    "metadata": {},
    "outputs": [],
@@ -502,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "id": "massive-olive",
    "metadata": {},
    "outputs": [],
@@ -561,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "id": "streaming-cylinder",
    "metadata": {},
    "outputs": [],
@@ -572,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "id": "mysterious-aerospace",
    "metadata": {},
    "outputs": [
@@ -591,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "id": "spiritual-groove",
    "metadata": {},
    "outputs": [
@@ -618,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 23,
    "id": "shared-disability",
    "metadata": {},
    "outputs": [],
@@ -677,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "id": "worst-cardiff",
    "metadata": {},
    "outputs": [],
@@ -688,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "id": "wrong-healing",
    "metadata": {},
    "outputs": [
@@ -707,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 26,
    "id": "political-spanking",
    "metadata": {},
    "outputs": [
@@ -963,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 33,
    "id": "lesbian-cameroon",
    "metadata": {},
    "outputs": [],
@@ -971,7 +980,9 @@
     "simclr_list_nmi = ['SimCLR', 0, 0, 0, 0]\n",
     "simclr_idec_list_nmi = ['SimCLR + IDEC', 0, 0, 0, 0]\n",
     "simclr_list_ca = ['SimCLR', 0, 0, 0, 0]\n",
-    "simclr_idec_list_ca = ['SimCLR + IDEC', 0, 0, 0, 0]"
+    "simclr_idec_list_ca = ['SimCLR + IDEC', 0, 0, 0, 0]\n",
+    "simclr_list_100_nmi = ['SimCLR + 100', 0, 0, 0, 0]\n",
+    "simclr_list_100_ca = ['SimCLR + 100', 0, 0, 0, 0]"
    ]
   },
   {
@@ -984,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 34,
    "id": "waiting-reverse",
    "metadata": {},
    "outputs": [],
@@ -1035,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 35,
    "id": "heavy-geneva",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 36,
    "id": "limited-fundamentals",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 37,
    "id": "sunrise-beijing",
    "metadata": {},
    "outputs": [
@@ -1314,6 +1325,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "worthy-showcase",
+   "metadata": {},
+   "source": [
+    "### CIFAR: Pretraining +100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "eight-brave",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nmis = 'trained_models/SimCLR/CIFAR/nmis_100.csv'\n",
+    "path_cas = 'trained_models/SimCLR/CIFAR/cas_100.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "daily-chick",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_simclr_nmis_cifar_dec = pd.read_csv(path_nmis, index_col=0)\n",
+    "df_simclr_cas_cifar_dec = pd.read_csv(path_cas, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "minute-samba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NMI mean: 0.4905\n",
+      "NMI std: 0.0105\n"
+     ]
+    }
+   ],
+   "source": [
+    "simclr_list_100_nmi[1], simclr_list_100_nmi[2] = print_total_mean_and_std('NMI', df_simclr_nmis_cifar_dec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "operational-daisy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster accuracy mean: 0.6106\n",
+      "Cluster accuracy std: 0.0266\n"
+     ]
+    }
+   ],
+   "source": [
+    "simclr_list_100_ca[1], simclr_list_100_ca[2] = print_total_mean_and_std('Cluster accuracy', df_simclr_cas_cifar_dec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cleared-philippines",
    "metadata": {},
    "source": [
@@ -1322,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 42,
    "id": "demographic-refund",
    "metadata": {},
    "outputs": [],
@@ -1373,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 43,
    "id": "neither-ontario",
    "metadata": {},
    "outputs": [],
@@ -1384,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 44,
    "id": "assumed-destiny",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1473,7 @@
        "0.04796861744598033"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 45,
    "id": "incorporated-despite",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 46,
    "id": "knowing-boards",
    "metadata": {},
    "outputs": [
@@ -1451,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 64,
    "id": "brutal-flower",
    "metadata": {},
    "outputs": [],
@@ -1470,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "bright-primary",
    "metadata": {},
    "outputs": [],
@@ -1480,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "id": "pressed-norfolk",
    "metadata": {},
    "outputs": [],
@@ -1491,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "id": "contrary-singer",
    "metadata": {},
    "outputs": [],
@@ -1502,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 68,
    "id": "mature-swift",
    "metadata": {},
    "outputs": [],
@@ -1513,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 69,
    "id": "comic-criterion",
    "metadata": {},
    "outputs": [
@@ -1532,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 70,
    "id": "peaceful-password",
    "metadata": {},
    "outputs": [
@@ -1551,6 +1630,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "amino-lesson",
+   "metadata": {},
+   "source": [
+    "### STL10: Pretraining + 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "handled-section",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nmis = 'trained_models/SimCLR/STL10/nmis_100.csv'\n",
+    "path_cas = 'trained_models/SimCLR/STL10/cas_100.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "apart-henry",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_simclr_nmis_stl10 = pd.read_csv(path_nmis, index_col=0)\n",
+    "df_simclr_cas_stl0 = pd.read_csv(path_cas, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "solid-transportation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NMI mean: 0.3515\n",
+      "NMI std: 0.0051\n"
+     ]
+    }
+   ],
+   "source": [
+    "simclr_list_100_nmi[3], simclr_list_100_nmi[4] = print_total_mean_and_std('NMI', df_simclr_nmis_stl10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "anticipated-compact",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster accuracy mean: 0.4106\n",
+      "Cluster accuracy std: 0.0163\n"
+     ]
+    }
+   ],
+   "source": [
+    "simclr_list_100_ca[3], simclr_list_100_ca[4] = print_total_mean_and_std('Cluster accuracy', df_simclr_cas_stl0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "preliminary-given",
    "metadata": {},
    "source": [
@@ -1559,13 +1706,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 51,
    "id": "unusual-germany",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_nmis = 'trained_models/SimCLR/STL10/nmis_idec.csv'\n",
-    "path_cas = 'trained_models/SimCLR/STL10/cas_idec.csv'"
+    "path_nmis = 'trained_models/SimCLR/STL10/nmis_new.csv'\n",
+    "path_cas = 'trained_models/SimCLR/STL10/cas_new.csv'"
    ]
   },
   {
@@ -1578,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "educational-penetration",
    "metadata": {},
    "outputs": [],
@@ -1588,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "pressed-reservation",
    "metadata": {},
    "outputs": [],
@@ -1599,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "short-appearance",
    "metadata": {},
    "outputs": [],
@@ -1610,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 55,
    "id": "satisfactory-stations",
    "metadata": {},
    "outputs": [],
@@ -1621,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 56,
    "id": "arabic-silver",
    "metadata": {},
    "outputs": [
@@ -1629,8 +1776,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NMI mean: 0.3885\n",
-      "NMI std: 0.0071\n"
+      "NMI mean: 0.3595\n",
+      "NMI std: 0.0173\n"
      ]
     }
    ],
@@ -1640,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 57,
    "id": "infinite-certificate",
    "metadata": {},
    "outputs": [
@@ -1648,8 +1795,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cluster accuracy mean: 0.4459\n",
-      "Cluster accuracy std: 0.0154\n"
+      "Cluster accuracy mean: 0.4026\n",
+      "Cluster accuracy std: 0.0220\n"
      ]
     }
    ],
@@ -1659,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 91,
    "id": "loving-front",
    "metadata": {},
    "outputs": [],
@@ -1667,13 +1814,122 @@
     "df_final_nmi.loc[2] = simclr_list_nmi\n",
     "df_final_nmi.loc[3] = simclr_idec_list_nmi\n",
     "df_final_ca.loc[2] = simclr_list_ca\n",
-    "df_final_ca.loc[3] = simclr_idec_list_ca"
+    "df_final_ca.loc[3] = simclr_idec_list_ca\n",
+    "df_final_nmi.loc[4] = simclr_list_100_nmi\n",
+    "df_final_ca.loc[4] = simclr_list_100_ca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "material-difference",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>CIFAR CA</th>\n",
+       "      <th>CIFAR CA STD</th>\n",
+       "      <th>STL10 CA</th>\n",
+       "      <th>STL10 CA STD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RotNet</td>\n",
+       "      <td>0.435650</td>\n",
+       "      <td>0.018361</td>\n",
+       "      <td>0.364128</td>\n",
+       "      <td>0.014185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RotNet + DEC</td>\n",
+       "      <td>0.206545</td>\n",
+       "      <td>0.002399</td>\n",
+       "      <td>0.196739</td>\n",
+       "      <td>0.029117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SimCLR</td>\n",
+       "      <td>0.590364</td>\n",
+       "      <td>0.023882</td>\n",
+       "      <td>0.411395</td>\n",
+       "      <td>0.022278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SimCLR + IDEC</td>\n",
+       "      <td>0.657623</td>\n",
+       "      <td>0.047969</td>\n",
+       "      <td>0.402610</td>\n",
+       "      <td>0.021980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SimCLR + 100</td>\n",
+       "      <td>0.610551</td>\n",
+       "      <td>0.026599</td>\n",
+       "      <td>0.410620</td>\n",
+       "      <td>0.016269</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Model  CIFAR CA  CIFAR CA STD  STL10 CA  STL10 CA STD\n",
+       "0         RotNet  0.435650      0.018361  0.364128      0.014185\n",
+       "1   RotNet + DEC  0.206545      0.002399  0.196739      0.029117\n",
+       "2         SimCLR  0.590364      0.023882  0.411395      0.022278\n",
+       "3  SimCLR + IDEC  0.657623      0.047969  0.402610      0.021980\n",
+       "4   SimCLR + 100  0.610551      0.026599  0.410620      0.016269"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final_ca"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "further-gateway",
+   "metadata": {},
+   "source": [
+    "TODO:\n",
+    "- recompute SimCLR STL10 IDEC\n",
+    "- recompute SimCLR STL10 +100"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "material-difference",
+   "id": "large-solid",
    "metadata": {},
    "outputs": [],
    "source": []
