--- a/Final - Copy.ipynb
+++ b/Final - Copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "corporate-sherman",
    "metadata": {
     "scrolled": false
@@ -51,12 +51,13 @@
     "from models.rotnet.custom_stl10 import *\n",
     "from util.cluster_accuracy import cluster_accuracy\n",
     "from models.simclr.custom_stl10 import SimCLRSTL10\n",
-    "from models.simclr.custom_fmnist import SimCLRFMNIST"
+    "from models.simclr.custom_fmnist import SimCLRFMNIST\n",
+    "from models.simclr.custom_cifar import SimCLRCIFAR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "palestinian-harris",
    "metadata": {},
    "outputs": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "conceptual-stretch",
    "metadata": {
     "scrolled": true
@@ -143,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "id": "industrial-accordance",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "cifar_test_data = load_util.load_custom_cifar('./data', download=False, train=False, data_percent=1.0, for_model='SimCLR', transforms=False)\n",
+    "cifar_test_data = SimCLRCIFAR('./data', download=False, train=False, data_percent=1.0, transforms=False)\n",
     "cifar_testloader = torch.utils.data.DataLoader(cifar_test_data,\n",
     "                                          batch_size=128,\n",
     "                                          shuffle=True,\n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "id": "manufactured-sleep",
    "metadata": {
     "scrolled": true
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "corporate-squad",
    "metadata": {},
    "outputs": [],
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "functional-annual",
    "metadata": {},
    "outputs": [],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "id": "loose-procurement",
    "metadata": {},
    "outputs": [],
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "id": "separated-debate",
    "metadata": {},
    "outputs": [],
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "id": "theoretical-manufacturer",
    "metadata": {},
    "outputs": [],
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "liquid-output",
    "metadata": {},
    "outputs": [],
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "id": "naked-teaching",
    "metadata": {},
    "outputs": [],
@@ -1602,11 +1603,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "loving-appreciation",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "path_nmis = 'trained_models/SimCLR/FMNIST/nmis_100.csv'\n",
+    "path_cas = 'trained_models/SimCLR/FMNIST/cas_100.csv'\n",
+    "model_name = 'SimCLR/FMNIST/pretrained_SimCLR_100_FMNIST'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cordless-divorce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nmis_100, df_cas_100 = compute_everything(path_nmis, path_cas, model_name, fmnist_colors_classes, compute=True, dataset='FMNIST', model_range=range(1,10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "preceding-prophet",
+   "metadata": {},
+   "source": [
+    "NMI mean: 0.6194\n",
+    "NMI variance: 0.0060\n",
+    "Cluser accuracy mean: 0.6371\n",
+    "Cluser accuracy variance: 0.0204"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "apart-bench",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nmis = 'trained_models/ConvAE/CIFAR/nmis.csv'\n",
+    "path_cas = 'trained_models/ConvAE/CIFAR/cas.csv'\n",
+    "model_name = 'ConvAE/CIFAR/pretrained_AE'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "yellow-equivalent",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nmis_100, df_cas_100 = compute_everything(path_nmis, path_cas, model_name, cifar_colors_classes, compute=True, dataset='CIFAR')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "neither-hurricane",
+   "metadata": {},
+   "source": [
+    "NMI mean: 0.1051\n",
+    "NMI variance: 0.0034\n",
+    "Cluser accuracy mean: 0.2210\n",
+    "Cluser accuracy variance: 0.0060"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "wired-tackle",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nmis = 'trained_models/ConvAE/CIFAR/nmis_idec.csv'\n",
+    "path_cas = 'trained_models/ConvAE/CIFAR/cas_idec.csv'\n",
+    "model_name = 'ConvAE/CIFAR/IDEC_AE'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "needed-daisy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nmis_100, df_cas_100 = compute_everything(path_nmis, path_cas, model_name, cifar_colors_classes, compute=True, dataset='CIFAR')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "departmental-diesel",
+   "metadata": {},
+   "source": [
+    "NMI mean: 0.1038\n",
+    "NMI variance: 0.0045\n",
+    "Cluser accuracy mean: 0.2182\n",
+    "Cluser accuracy variance: 0.0052"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "connected-uzbekistan",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nmis = 'trained_models/ConvAE/FMNIST/nmis.csv'\n",
+    "path_cas = 'trained_models/ConvAE/FMNIST/cas.csv'\n",
+    "model_name = 'ConvAE/FMNIST/pretrained_AE_FMNIST'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "noticed-framing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nmis_100, df_cas_100 = compute_everything(path_nmis, path_cas, model_name, fmnist_colors_classes, compute=True, dataset='FMNIST')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "associate-department",
+   "metadata": {},
+   "source": [
+    "NMI mean: 0.5320\n",
+    "NMI variance: 0.0050\n",
+    "Cluser accuracy mean: 0.5328\n",
+    "Cluser accuracy variance: 0.0071"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "bronze-cleaners",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nmis = 'trained_models/ConvAE/FMNIST/nmis_idec.csv'\n",
+    "path_cas = 'trained_models/ConvAE/FMNIST/cas_idec.csv'\n",
+    "model_name = 'ConvAE/FMNIST/IDEC_AE_FMNIST'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bulgarian-overview",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nmis_100, df_cas_100 = compute_everything(path_nmis, path_cas, model_name, fmnist_colors_classes, compute=True, dataset='FMNIST')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "geographic-austin",
+   "metadata": {},
+   "source": [
+    "NMI mean: 0.4096\n",
+    "NMI variance: 0.0461\n",
+    "Cluser accuracy mean: 0.4011\n",
+    "Cluser accuracy variance: 0.0302"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "weighted-fleece",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nmis = 'trained_models/ConvAE/STL10/nmis.csv'\n",
+    "path_cas = 'trained_models/ConvAE/STL10/cas.csv'\n",
+    "model_name = 'ConvAE/STL10/pretrained_AE_STL10'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "random-induction",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nmis_100, df_cas_100 = compute_everything(path_nmis, path_cas, model_name, stl10_colors_classes, compute=True, dataset='STL10')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "blank-elite",
+   "metadata": {},
+   "source": [
+    "NMI mean: 0.1465\n",
+    "NMI variance: 0.0089\n",
+    "Cluser accuracy mean: 0.2309\n",
+    "Cluser accuracy variance: 0.0110"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "cheap-spectrum",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_nmis = 'trained_models/ConvAE/STL10/nmis_idec.csv'\n",
+    "path_cas = 'trained_models/ConvAE/STL10/cas_idec.csv'\n",
+    "model_name = 'ConvAE/STL10/IDEC_AE_STL'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "impressive-village",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ConvAE/STL10/IDEC_AE_STL_0.pth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\everything\\Studium\\WS2020\\Bachelor\\dcl_b\\models\\dec\\DEC.py:11: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.centers = torch.nn.Parameter(torch.tensor(init_np_centers), requires_grad=True)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error(s) in loading state_dict for IDEC:\n\tsize mismatch for cluster_module.centers: copying a param with shape torch.Size([1, 64]) from checkpoint, the shape in current model is torch.Size([10, 64]).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-54-777fa8423705>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_nmis_100\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_cas_100\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_everything\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_nmis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpath_cas\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstl10_colors_classes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompute\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'STL10'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-9-7af3178b4535>\u001b[0m in \u001b[0;36mcompute_everything\u001b[1;34m(path_nmis, path_cas, model_name, colors_classes, compute, dataset, model_range, run_range)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcompute_everything\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_nmis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpath_cas\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolors_classes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompute\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'CIFAR'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_range\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrun_range\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcompute\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[0mdf_nmis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_cas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_nmis_and_cas_10_runs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolors_classes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_range\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmodel_range\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrun_range\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrun_range\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mdf_nmis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_nmis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-7-e33dae65867f>\u001b[0m in \u001b[0;36mget_nmis_and_cas_10_runs\u001b[1;34m(model_name, colors_classes, device, dataset, model_range, run_range)\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m         \u001b[0mnmis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[0mcas\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\everything\\Studium\\WS2020\\Bachelor\\dcl_b\\util\\util.py\u001b[0m in \u001b[0;36mload_model\u001b[1;34m(name, device, cluster_centres)\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     82\u001b[0m     \u001b[0mstate_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'trained_models/{name}'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap_location\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 83\u001b[1;33m     \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     84\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\alina\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36mload_state_dict\u001b[1;34m(self, state_dict, strict)\u001b[0m\n\u001b[0;32m   1221\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1222\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror_msgs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1223\u001b[1;33m             raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n\u001b[0m\u001b[0;32m   1224\u001b[0m                                self.__class__.__name__, \"\\n\\t\".join(error_msgs)))\n\u001b[0;32m   1225\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0m_IncompatibleKeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmissing_keys\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0munexpected_keys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for IDEC:\n\tsize mismatch for cluster_module.centers: copying a param with shape torch.Size([1, 64]) from checkpoint, the shape in current model is torch.Size([10, 64])."
+     ]
+    }
+   ],
+   "source": [
+    "df_nmis_100, df_cas_100 = compute_everything(path_nmis, path_cas, model_name, stl10_colors_classes, compute=True, dataset='STL10')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hundred-balance",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "."
+   ]
   }
  ],
  "metadata": {
